--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,16 @@ language: python
 #sudo: false
 # choose python versions
 python:
-  - "3.6"
+  - "3.8"
   - "3.7"
+  - "3.6"
   - "2.7"
-env:
-  - TEST_TARGET=unit PYTHON_TARGET=3.6
-  # - TEST_TARGET=integration
 
 install:
 
   # Install miniconda
   # -----------------
+  - PYTHON_TARGET=$TRAVIS_PYTHON_VERSION
   - if [[ $PYTHON_TARGET == 2* ]]; then
       export CONDA_BASE=http://repo.continuum.io/miniconda/Miniconda2;
     else
