--- a/.travis.yml
+++ b/.travis.yml
@@ -52,10 +52,10 @@ install:
 # command to run tests
 #script
 script:
-  - pytest --cov=./
+  - pytest --cov=./mypackage
 
 after_success:
   - codecov
-  - bash <(curl -s https://codecov.io/bash) 
+#  - bash <(curl -s https://codecov.io/bash) 
 
 
