Fixes to coverage, testing and travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,10 +52,9 @@ install:
 # command to run tests
 #script
 script:
-  - pytest --cov=./
+  - python -m pytest --cov=./mypackage
 
 after_success:
-  - codecov
   - bash <(curl -s https://codecov.io/bash) 
 
 
